<resources>
    <string name="app_name">Money Lover</string>
    <string name="vietnamese">Vietnamese</string>
    <string name="english">English</string>
    <string name="logo">Logo</string>
    <string name="money_lover">Money Lover</string>
    <string name="choose_language">Choose language</string>
    <string name="btn_close">Nút đóng</string>
    <string name="vietnam_flag">VietNam flag</string>
    <string name="uk_flag">United-Kingdom flag</string>
    <string name="change_language">Change language</string>
    <string name="login_view_pager">Here are the benefits of the app</string>
    <string name="sign_up">Sign up</string>
    <string name="login">Login</string>
    <string name="button_back">Back to previous</string>
    <string name="email">Email</string>
    <string name="create_account">Create Account</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="welcome_signup">Welcome to Money Lover, track your spending and save smarter.</string>
    <string name="welcome_login">Welcome back, you probably missed something.</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="login_with_google">Login with Google</string>
    <string name="login_here">Login here</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="home">Home</string>
    <string name="transactions">Transactions</string>
    <string name="budget">Budget</string>
    <string name="profile">Profile</string>
    <string name="add_transaction">Add transaction</string>
    <string name="photo_user">Photo User</string>
    <string name="display_name">Display Name</string>
    <string name="log_out">Log out</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hi_welcome">Hi, welcome!</string>
    <string name="my_balance">My Balance</string>
    <string name="hidden_balance">Hidden balance</string>
    <string name="edit_balance">Edit balance</string>
    <string name="default_balance">5,200,000 VNĐ</string>
    <string name="balance_when_hidden">••• ••• •••</string>
    <string name="vnd">VND</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="cancel">Cancel</string>
    <string name="edit_wallet">Edit wallet</string>
    <string name="save">Save</string>
    <string name="limit_amount">Limit Amount</string>
    <string name="zero">0</string>
    <string name="warning">Warning</string>
    <string name="limit_amount_warning">Limit Amount allows you to receive alerts if you overspend.</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="calendar">Calendar</string>
    <string name="type">Type</string>
    <string name="select_group">Select group</string>
    <string name="default_date">11/12/2024</string>
    <string name="add">Add</string>
    <string name="f_and_b">Food and beverage</string>
    <string name="travel">Travel</string>
    <string name="beautify">Beautify</string>
    <string name="entertainment">Entertainment</string>
    <string name="personal_belongings">Personal belongings</string>
    <string name="bill">Bill</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="category_icon">Category icon</string>
    <string name="incoming_transfer">Incoming transfer</string>
    <string name="salary">Salary</string>
    <string name="other_income">Other income</string>
    <string name="new_category">New category</string>
    <string name="category_name">Category name</string>
    <string name="eg_category_name">eg: \"Online shopping\"</string>
    <string name="category_type">Category type</string>
    <string name="amount_warning">Please enter amount!</string>
    <string name="category_type_warning">Please select category type!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_month">This month</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="state_transaction">You have no transactions during this time!</string>
    <string name="transaction_details">Transaction details</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="ok">Ok</string>
    <string name="back">Back</string>
    <string name="agree">Agree</string>
    <string name="error">Error!</string>
    <string name="login_error">Error occurred while logging in!</string>
    <string name="confirm">Confirm</string>
    <string name="this_month_report">This month\'s report</string>
    <string name="total_expenses_this_month">Total expenses this month</string>
    <string name="increase">Increase</string>
    <string name="decrease">Decrease</string>
    <string name="trend">Trend</string>
    <string name="default_percent">36%</string>
    <string name="last_month">Last month</string>
    <string name="percent">%</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_transaction">Are you sure you want to delete this transaction?</string>
    <string name="top_expense_categories">Top expense categories</string>
    <string name="total">Total:</string>
    <string name="ic_edit_profile">Icon edit profile</string>
    <string name="edit_profile">Edit profile</string>
    <string name="ic_go_to">Icon go to</string>
    <string name="notify">Notify</string>
    <string name="debt">Debt management</string>
    <string name="ic_trash">Icon trash</string>
    <string name="clear_data">Clear data</string>
    <string name="ic_coin">Icon coin</string>
    <string name="ic_bell">Icon bell</string>
    <string name="confirm_clear_data">Are you sure you want to erase the data?</string>
    <string name="this_month_budget">This month\'s budget</string>
    <string name="new_budget">New budget</string>
    <string name="amount_you_can_spend">Amount you can spend</string>
    <string name="total_budget">Total budget</string>
    <string name="total_spent">Total spent</string>
    <string name="confirm_delete_budget">Are you sure you want to delete this budget?</string>
    <string name="empty_box">Empty box</string>
    <string name="layout_empty_budget_title">You don\'t have any budget</string>
    <string name="layout_empty_budget_desc">Start saving money by creating your own budget</string>
    <string name="create_budget">Create budget</string>
    <string name="warning_budget">This budget will be applied monthly</string>
    <string name="create">Create</string>
    <string name="select_expense_type">Select expense type</string>
</resources>