<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:minWidth="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginTop="20dp"
    android:paddingBottom="10dp"
    android:background="@drawable/radius_layout">

    <TextView
        android:id="@+id/txtTitleDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/main_font_bold"
        android:text="@string/title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtMessageDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:textSize="18sp"
        android:maxWidth="260dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/main_font"
        android:text="@string/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleDialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAgreeDialog"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:text="@string/agree"
        android:textSize="16sp"
        android:fontFamily="@font/main_font"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:paddingBottom="2dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtMessageDialog" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnDegreeDialog"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/btn_stroke_blue"
        android:fontFamily="@font/main_font"
        android:paddingBottom="2dp"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/btnAgreeDialog"
        app:layout_constraintTop_toBottomOf="@+id/txtMessageDialog" />
</androidx.constraintlayout.widget.ConstraintLayout>