<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.TransactionMonthlyFragment">

    <LinearLayout
        android:id="@+id/btnDatePickerTransactionMonthlyFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/radius_layout"
        android:clickable="true"
        android:focusable="true"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDateTransactionMonthlyFragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:fontFamily="@font/main_font"
            android:text="@string/default_date"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/imgDatePickerTransactionMonthlyFragment"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="7dp"
            android:contentDescription="@string/calendar"
            android:src="@drawable/ic_date_picker" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvTransactionMonthlyFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/transactions"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDatePickerTransactionMonthlyFragment" />

    <TextView
        android:id="@+id/txtStateTransactionMonthlyFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:fontFamily="@font/main_font"
        android:text="@string/state_transaction"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rcvTransactionMonthlyFragment" />

</androidx.constraintlayout.widget.ConstraintLayout>