<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imgLogoLoginActivity"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_logo" />

    <TextView
        android:id="@+id/txtMoneyLoverLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:fontFamily="@font/logo_font"
        android:text="@string/money_lover"
        android:textColor="@color/main_color_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/imgLogoLoginActivity"
        app:layout_constraintStart_toEndOf="@+id/imgLogoLoginActivity"
        app:layout_constraintTop_toTopOf="@+id/imgLogoLoginActivity" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangeLanguageLoginActivity"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginEnd="20dp"
        android:paddingBottom="1dp"
        android:background="@drawable/btn_grey"
        android:fontFamily="@font/main_font_bold"
        android:textSize="16sp"
        android:textColor="@color/main_color"
        android:text="@string/vietnamese"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/txtMoneyLoverLoginActivity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtMoneyLoverLoginActivity" />

</androidx.constraintlayout.widget.ConstraintLayout>